# Embedded-lab

./: base_interrupt.c  hw_base_interrupt.c  sw_base_interrupt.c
lab1/: CMakeLists.txt  blink  blink.c  blink.py  blink_button  blink_button.c  blink_button_double  blink_button_double.c  lcd  lcd.c  lcd.py  lcd2  lcd2.c  lcd3  lcd3.c
lab2/: CMakeLists.txt  base_interrupt.c
lab2/src/: base_interrupt.c  hw_base_interrupt.c  keyp_base_interrupt.c  lcd_api.h  scroll_base_interrupt.c
lab3/src/: buzzer_interrupt.c  buzzer_polling.c  chipi_chapa.c  keyp_api.c  lcd_api.c  scroll_lab2.c  seven_segment.c  tacometer.c
lab4/: .clang-format
lab4/include/: keyp_api.h
lab4/src/: seven_segment.c
lab5/: CMakeLists.txt
lab5/src/: pwm_signal.c  scroll_interrupt.c  scroll_polling.c
lab6/include/: dimmer.h  key.h  lcd.h  pwm_experiment.h  rgb_pwm.h  scroll_interrupt.h  scroll_polling.h
lab6/src/: dimmer.cpp  key.cpp  main.cpp  pwm_experiment.cpp  rgb_pwm.cpp  scroll_interrupt.cpp  scroll_polling.cpp
lab7/include/: dc_motor.hpp  dc_motor_driver.hpp  servo_motor.hpp  stepper_char.hpp  stepper_motor.hpp
lab7/src/: dc_motor.cpp  dc_motor_driver.cpp  lcd.cpp  main.cpp  servo_motor.cpp  stepper_char.cpp  stepper_motor.cpp
